@@ -240,7 +240,7 @@ public class NHIWidgetXMLService {
   private RedisService redis;
 
   @Autowired
-  private CodeTableService codeTableService;
+  private CodeTableService cts;
 
   @Autowired
   private MY_MRDao myMrDao;
@@ -333,7 +333,7 @@ public class NHIWidgetXMLService {
     int result = dDataList.size();
     fd.setRecord(result);
     HashMap<String, String> payCodeType = getPayCodeType();
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
 
     int count = 0;
     for (OP_DData op_dData : dDataList) {
@@ -363,9 +363,9 @@ public class NHIWidgetXMLService {
               && shouldCompareWarning(mr, cw, opd.getFuncType())) {
             diffList = new ArrayList<FILE_DIFF>();
             clearFileDiff(mr.getId());
-            checkDiffOpd(diffList, opd);
+            checkDiffOpdCureItem(diffList, opd);
           }
-          mr.updateMR(opd, diffList, codeTableService);
+          mr.updateMR(opd, diffList, cts);
           if (diffList != null && diffList.size() > 0) {
             mr.setChangeOther(1);
           }
@@ -481,7 +481,7 @@ public class NHIWidgetXMLService {
     }
     int result = ip.getDdata().size();
     fd.setRecord(result);
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
 
     HashMap<String, String> payCodeType = getPayCodeType();
     List<IP_P> ippBatch = new ArrayList<IP_P>();
@@ -520,7 +520,7 @@ public class NHIWidgetXMLService {
             diffList = new ArrayList<FILE_DIFF>();
             clearFileDiff(mr.getId());
           }
-          mr.updateMR(ipd, diffList, codeTableService);
+          mr.updateMR(ipd, diffList, cts);
           if (diffList != null && diffList.size() > 0) {
             mr.setChangeOther(1);
           }
@@ -534,45 +534,8 @@ public class NHIWidgetXMLService {
         mr.setStatus(MR_STATUS.NO_CHANGE.value());
       }
       mr.setApplYm(ipt.getFeeYm());
-      if (diffList == null) {
-        mr.setIcdcm1(ipd.getIcdCm1());
-        MRDetail.updateIcdcmOtherIP(mr, ipd);
-        MRDetail.updateIcdpcsIP(mr, ipd);
-        MRDetail.updateIcdAllByAlphabet(mr);
-        CODE_TABLE ct = codeTableService.getCodeTable("INFECTIOUS", ipd.getIcdCm1());
-        mr.setInfectious((ct == null) ? 0 : 1);
-        mr = mrDao.save(mr);
-        ipd.setMrId(mr.getId());
-        if (ipd.getOwnExpense() == null) {
-          ipd.setOwnExpense(0);
-        }
-        ipd = ipdDao.save(ipd);
-      } else {
-        if (!mr.getIcdcm1().equals(ipd.getIcdCm1())) {
-          FILE_DIFF fileDiff = new FILE_DIFF(mr.getId(), "icdCM", ipd.getIcdCm1());
-          fileDiff.setArrayIndex(0);
-          diffList.add(fileDiff);
-          mr.setChangeICD(1);
-        }
+      findDiffIpd(diffList, mr, ipd);
 
-        String oldIcdcmOthers = mr.getIcdcmOthers();
-        MRDetail.updateIcdcmOtherIP(mr, ipd);
-        if (compareDotStrings(mr.getId(), oldIcdcmOthers, mr.getIcdcmOthers(), "icdCM", diffList,
-            0)) {
-          mr.setChangeICD(1);
-          mr.setIcdcmOthers(oldIcdcmOthers);
-        }
-
-        String oldIcdpcs = mr.getIcdpcs();
-        MRDetail.updateIcdpcsIP(mr, ipd);
-        if (compareDotStrings(mr.getId(), oldIcdpcs, mr.getIcdpcs(), "icdOP", diffList, -1)) {
-          mr.setChangeOther(1);
-          mr.setIcdpcs(oldIcdpcs);
-        }
-      }
-
-      mr.setdId(ipd.getId());
-      mrDao.updateDid(ipd.getId(), mr.getId());
       StringBuffer sb = new StringBuffer(",");
       // 自費金額
       int ownExpense = 0;
@@ -675,7 +638,6 @@ public class NHIWidgetXMLService {
       }
       mr.setOwnExpense(ownExpense);
       ipd.setOwnExpense(ownExpense);
-      ipdDao.save(ipd);
       mrDao.save(mr);
     }
     if (ippBatch.size() > 0) {
@@ -878,7 +840,7 @@ public class NHIWidgetXMLService {
     if (ippNew != null) {
       MO mo = new MO();
       mo.setMrId(mrId);
-      mo.setIPPData(ippNew, codeTableService);
+      mo.setIPPData(ippNew, cts);
       moList.add(mo);
     }
   }
@@ -902,7 +864,7 @@ public class NHIWidgetXMLService {
     if (oppNew != null) {
       MO mo = new MO();
       mo.setMrId(mrId);
-      mo.setOPPData(oppNew, codeTableService);
+      mo.setOPPData(oppNew, cts);
       moList.add(mo);
     }
   }
@@ -1228,6 +1190,7 @@ public class NHIWidgetXMLService {
       map.put("funcDate", (String) obj[3]);
       map.put("mrId", (BigInteger) obj[4]);
       map.put("birth", (String) obj[5]);
+      map.put("cardSeqNo", (String) obj[6]);
       result.add(map);
     }
     start = System.currentTimeMillis() - start;
@@ -1307,16 +1270,29 @@ public class NHIWidgetXMLService {
     int index = -1;
     for (int i = list.size() - 1; i >= 0; i--) {
       HashMap<String, Object> map = list.get(i);
+      // 比對生日、證號、就醫日期及就醫序號
       if (((String) map.get("birth")).equals(opd.getIdBirthYmd())
           && ((String) map.get("rocId")).equals(opd.getRocId())
           && ((String) map.get("funcDate")).equals(opd.getFuncDate())) {
-        index = i;
-        opd.setId(((BigInteger) map.get("id")).longValue());
-        opd.setMrId(((BigInteger) map.get("mrId")).longValue());
-        if (opd.getOwnExpense() == null) {
-          opd.setOwnExpense(0);
+        if (map.get("cardSeqNo") != null) {
+          if (((String) map.get("cardSeqNo")).equals(opd.getCardSeqNo())) {
+            index = i;
+            opd.setId(((BigInteger) map.get("id")).longValue());
+            opd.setMrId(((BigInteger) map.get("mrId")).longValue());
+            if (opd.getOwnExpense() == null) {
+              opd.setOwnExpense(0);
+            }
+            break;
+          }
+        } else if (opd.getCardSeqNo() == null){
+          index = i;
+          opd.setId(((BigInteger) map.get("id")).longValue());
+          opd.setMrId(((BigInteger) map.get("mrId")).longValue());
+          if (opd.getOwnExpense() == null) {
+            opd.setOwnExpense(0);
+          }
+          break;
         }
-        break;
       }
     }
     if (index > -1) {
@@ -1770,7 +1746,7 @@ public class NHIWidgetXMLService {
         if (mrDb.getStatus() == null) {
           mrDb.setStatus(MR_STATUS.NO_CHANGE.value());
         }
-        mrList.add(new MRResponse(mrDb, codeTableService));
+        mrList.add(new MRResponse(mrDb, cts));
       }
     }
     updateMRStatusCountAll(mc, smrp.getAll());
@@ -1902,7 +1878,7 @@ public class NHIWidgetXMLService {
     if (pages != null && pages.getSize() > 0) {
       for (MR mrDb : pages) {
         updateMRStatusCount(mrDb, mc);
-        MRResponse mrr = new MRResponse(mrDb, codeTableService);
+        MRResponse mrr = new MRResponse(mrDb, cts);
         mrList.add(mrr);
         try {
           String json = objectMapper.writeValueAsString(mrr);
@@ -1986,7 +1962,7 @@ public class NHIWidgetXMLService {
     if (pages != null && pages.getSize() > 0) {
       for (MR mrDb : pages) {
         updateMRStatusCount(mrDb, mc);
-        MRResponse mrr = new MRResponse(mrDb, codeTableService);
+        MRResponse mrr = new MRResponse(mrDb, cts);
         mrList.add(mrr);
       }
     }
@@ -2628,7 +2604,7 @@ public class NHIWidgetXMLService {
       }
       if (XMLConstant.DATA_FORMAT_OP.equals(result.getDataFormat())) {
         OP_D opD = opdDao.getOne(result.getdId());
-        result.setOPDData(opD, codeTableService);
+        result.setOPDData(opD, cts);
 
         List<OP_P> oppList = oppDao.findByOpdIdOrderByOrderSeqNo(opD.getId());
         List<MO> moList = new ArrayList<MO>();
@@ -2638,13 +2614,13 @@ public class NHIWidgetXMLService {
             opp.setOrderSeqNo(i+1);
           }
           MO mo = new MO();
-          mo.setOPPData(opp, codeTableService);
+          mo.setOPPData(opp, cts);
           moList.add(mo);
         }
         result.setMos(moList);
       } else if (XMLConstant.DATA_FORMAT_IP.equals(result.getDataFormat())) {
         IP_D ipD = ipdDao.getOne(result.getdId());
-        result.setIPDData(ipD, codeTableService);
+        result.setIPDData(ipD, cts);
 
         List<IP_P> ippList = ippDao.findByIpdIdOrderByOrderSeqNo(ipD.getId());
         List<MO> moList = new ArrayList<MO>();
@@ -2654,7 +2630,7 @@ public class NHIWidgetXMLService {
             ipp.setOrderSeqNo(i+1);
           }
           MO mo = new MO();
-          mo.setIPPData(ipp, codeTableService);
+          mo.setIPPData(ipp, cts);
           moList.add(mo);
         }
         result.setMos(moList);
@@ -2695,10 +2671,10 @@ public class NHIWidgetXMLService {
         if (isRaw && fd.getNewValue() != null) {
           if (mrDetail.getIcdCM().size() <= fd.getArrayIndex().intValue()) {
             mrDetail.getIcdCM()
-                .add(CodeTableService.getCodeBase(codeTableService, "ICD10-CM", fd.getNewValue()));
+                .add(CodeTableService.getCodeBase(cts, "ICD10-CM", fd.getNewValue()));
           } else {
             mrDetail.getIcdCM().set(fd.getArrayIndex().intValue(),
-                CodeTableService.getCodeBase(codeTableService, "ICD10-CM", fd.getNewValue()));
+                CodeTableService.getCodeBase(cts, "ICD10-CM", fd.getNewValue()));
           }
         }
       } else if ("icdOP".equals(fd.getName())) {
@@ -2709,12 +2685,15 @@ public class NHIWidgetXMLService {
         diffIcdOPList.add(fd.getArrayIndex());
         mrDetail.setDiffIcdOP(diffIcdOPList);
         if (isRaw && fd.getNewValue() != null) {
-          if (mrDetail.getIcdCM().size() <= fd.getArrayIndex().intValue()) {
+          if (mrDetail.getIcdOP() == null) {
+            mrDetail.setIcdOP(new ArrayList<CodeBase>());
+          }
+          if (mrDetail.getIcdOP().size() <= fd.getArrayIndex().intValue()) {
             mrDetail.getIcdOP()
-                .add(CodeTableService.getCodeBase(codeTableService, "ICD10-PCS", fd.getNewValue()));
+                .add(CodeTableService.getCodeBase(cts, "ICD10-PCS", fd.getNewValue()));
           } else {
             mrDetail.getIcdOP().set(fd.getArrayIndex().intValue(),
-                CodeTableService.getCodeBase(codeTableService, "ICD10-PCS", fd.getNewValue()));
+                CodeTableService.getCodeBase(cts, "ICD10-PCS", fd.getNewValue()));
           }
         }
       } else if ("mos".equals(fd.getName())) {
@@ -2727,13 +2706,12 @@ public class NHIWidgetXMLService {
         if (isRaw && fd.getNewValue() != null) {
           MO newMO = null;
           for (MO mo : moList) {
-            if (mo.getOrderSeqNo().intValue() == fd.getArrayIndex().intValue()) {
+            if (mo.getOrderSeqNo().intValue() == (fd.getArrayIndex().intValue() + 1)) {
               newMO = mo;
               if (XMLConstant.DATA_FORMAT_IP.equals(mrDetail.getDataFormat())) {
-                IP_P ipp = newMO.toIpp(codeTableService);
-                newMO.setIPPData(ipp, codeTableService);
+                newMO.convertToIPP(cts);
               } else {
-
+                newMO.convertToOPP(cts);
               }
               break;
             }
@@ -2742,7 +2720,7 @@ public class NHIWidgetXMLService {
             if (mrDetail.getMos() == null) {
               mrDetail.setMos(new ArrayList<MO>());
             }
-            if (mrDetail.getMos().size() < (fd.getArrayIndex())) {
+            if (mrDetail.getMos().size() < (fd.getArrayIndex() + 1)) {
               mrDetail.getMos().add(newMO);
             } else {
               mrDetail.getMos().set(fd.getArrayIndex().intValue() - 1, newMO);
@@ -2758,10 +2736,10 @@ public class NHIWidgetXMLService {
         mrDetail.setDiffCureItems(diffCureItemsList);
         if (isRaw && fd.getNewValue() != null) {
           if (mrDetail.getCureItems().size() <= fd.getArrayIndex().intValue()) {
-            mrDetail.getCureItems().add(CodeTableService.getCodeBase(codeTableService, "OP_CURE_ITEM", fd.getNewValue()));
+            mrDetail.getCureItems().add(CodeTableService.getCodeBase(cts, "OP_CURE_ITEM", fd.getNewValue()));
           } else {
             mrDetail.getCureItems().set(fd.getArrayIndex().intValue(),
-                CodeTableService.getCodeBase(codeTableService, "OP_CURE_ITEM", fd.getNewValue()));
+                CodeTableService.getCodeBase(cts, "OP_CURE_ITEM", fd.getNewValue()));
           }
         }
       } else {
@@ -2784,7 +2762,7 @@ public class NHIWidgetXMLService {
   private void updateNewFieldValue(FILE_DIFF fd, MRDetail result, SimpleDateFormat sdf)
       throws ParseException {
     if ("funcType".equals(fd.getName())) {
-      result.setFuncType(CodeTableService.getDesc(codeTableService, "FUNC_TYPE", fd.getNewValue()));
+      result.setFuncType(CodeTableService.getDesc(cts, "FUNC_TYPE", fd.getNewValue()));
     } else if ("rocId".equals(fd.getName())) {
       result.setRocId(fd.getNewValue());
     } else if ("name".equals(fd.getName())) {
@@ -2798,13 +2776,15 @@ public class NHIWidgetXMLService {
     } else if ("drgCode".equals(fd.getName())) {
       result.setTwDrgCode(fd.getNewValue());
       result.setDrgCode(fd.getNewValue());
+    } else if ("partNo".equals(fd.getName())) {
+      result.setPartNo(CodeTableService.getDesc(cts, "PART_NO", fd.getNewValue()));
     }
-    // else if ("ownExpense".equals(fd.getName())) {
-    // result.setNonApplDot(Integer.parseInt(fd.getNewValue()));
-    // }
   }
 
   private boolean updateDiff(MRDetail mrDetail, int oldStatus) {
+    if (mrDetail.getStatus() == null) {
+      return false;
+    }
     if (mrDetail.getStatus().intValue() == MR_STATUS.WAIT_CONFIRM.value()
         || oldStatus == MR_STATUS.NO_CHANGE.value()) {
       return false;
@@ -2973,7 +2953,7 @@ public class NHIWidgetXMLService {
         myMr.setApplUserId(userId);
         myMr.setApplName(displayName);
         myMr.setPrsnUserId(prsnUserId);
-        myMr.setFuncTypec(codeTableService.getDesc("FUNC_TYPE", myMr.getFuncType()));
+        myMr.setFuncTypec(cts.getDesc("FUNC_TYPE", myMr.getFuncType()));
         myMrDao.save(myMr);
       }
     } else {
@@ -2982,6 +2962,11 @@ public class NHIWidgetXMLService {
         myMr.setApplUserId(userId);
         myMr.setApplName(displayName);
       }
+      myMr.setChangeIcd(mr.getChangeICD());
+      myMr.setChangeInh(mr.getChangeInh());
+      myMr.setChangeOrder(mr.getChangeOrder());
+      myMr.setChangeOther(mr.getChangeOther());
+      myMr.setChangeSo(mr.getChangeSo());
       myMr.setStatus(status);
       myMrDao.save(myMr);
     }
@@ -3820,7 +3805,7 @@ public class NHIWidgetXMLService {
     if (moList.size() > 0) {
       // 有新增的醫令
       for (MO mo : moList) {
-        IP_P newIPP = mo.toIpp(codeTableService);
+        IP_P newIPP = mo.toIpp(cts);
         if (saveIPP) {
           ippDao.save(newIPP);
           orderQty++;
@@ -4729,7 +4714,7 @@ public class NHIWidgetXMLService {
     	long prsnUserId = userService.getUserIdByName(mr.getPrsnName());
         myMr = new MY_MR(mr);
         myMr.setPrsnUserId(prsnUserId);
-        myMr.setFuncTypec(codeTableService.getDesc("FUNC_TYPE", myMr.getFuncType()));
+        myMr.setFuncTypec(cts.getDesc("FUNC_TYPE", myMr.getFuncType()));
       }
       myMr.setApplUserId(user.getId());
       myMr.setNoticeName(receiver);
@@ -5407,7 +5392,6 @@ public class NHIWidgetXMLService {
     // 儲存核刪修改記錄
     DEDUCTED_NOTE update = checkIfDirty(db, note);
     if (update != null) {
-      System.out.println("update is not null " + update.getId());
       update.setEditor(username);
       deductedNoteDao.save(update);
       db.setStatus(0);
@@ -5419,7 +5403,7 @@ public class NHIWidgetXMLService {
   private DEDUCTED_NOTE checkIfDirty(DEDUCTED_NOTE old, DEDUCTED_NOTE newNote) {
     boolean isDirty = false;
     DEDUCTED_NOTE update = new DEDUCTED_NOTE();
-    update.setId(old.getId());
+    //update.setId(old.getId());
     if (!checkIfEquals(old.getAfrAmount(), newNote.getAfrAmount())) {
       isDirty = true; 
     }
@@ -5545,12 +5529,15 @@ public class NHIWidgetXMLService {
     if (!checkIfEquals(old.getDeductedDate(), newNote.getDeductedDate())) {
       isDirty = true;
     }
+    update.setDeductedDate(newNote.getDeductedDate());
     if (!checkIfEquals(old.getRollbackDate(), newNote.getRollbackDate())) {
       isDirty = true;
     }
+    update.setRollbackDate(newNote.getRollbackDate());
     if (!checkIfEquals(old.getDisputeDate(), newNote.getDisputeDate())) {
       isDirty = true;
     }
+    update.setDisputeDate(newNote.getDisputeDate());
     update.setUpdateAt(new java.util.Date());
     if (isDirty) {
       return update;
@@ -6166,7 +6153,7 @@ public class NHIWidgetXMLService {
       sb.append("</a></td><td>");
       sb.append(mr.getFuncType());
       sb.append("</td><td>");
-      sb.append(codeTableService.getDesc("FUNC_TYPE", mr.getFuncType()));
+      sb.append(cts.getDesc("FUNC_TYPE", mr.getFuncType()));
       sb.append("</td><td>");
       sb.append(mr.getPrsnId());
       sb.append("</td><td>");
@@ -6280,7 +6267,7 @@ public class NHIWidgetXMLService {
     //System.out.println("mrList:" + mrList.size() + "," +  orderDate[0] + " , " +  orderDate[1]);
     List<OP_D> opdList = opdDao.findByIDFromMR(orderDate[0], orderDate[1]);
     //System.out.println("opdList:" + opdList.size());
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
    
     for (int i = 1; i < sheet.getPhysicalNumberOfRows(); i++) {
       HSSFRow row = sheet.getRow(i);
@@ -6311,9 +6298,9 @@ public class NHIWidgetXMLService {
             && shouldCompareWarning(mr, cw, opd.getFuncType())) {
           diffList = new ArrayList<FILE_DIFF>();
           clearFileDiff(mr.getId());
-          checkDiffOpd(diffList, opd);
+          checkDiffOpdCureItem(diffList, opd);
         }
-        mr.updateMR(opd, diffList, codeTableService);
+        mr.updateMR(opd, diffList, cts);
         if (diffList != null && diffList.size() > 0) {
           mr.setChangeOther(1);
         }
@@ -6716,7 +6703,7 @@ public class NHIWidgetXMLService {
   private void updateIpd(IP_D result, HashMap<String, String> values) {
     if (values.get("CASE_TYPE") != null) {
       if (values.get("CASE_TYPE").length() > 2) {
-        result.setCaseType(codeTableService.getCodeByDesc("IP_CASE_TYPE", values.get("CASE_TYPE")));
+        result.setCaseType(cts.getCodeByDesc("IP_CASE_TYPE", values.get("CASE_TYPE")));
       }
     } else {
       result.setCaseType(values.get("CADE_TYPE"));
@@ -6733,7 +6720,7 @@ public class NHIWidgetXMLService {
     result.setPayType(values.get("PAY_TYPE"));
     if (values.get("FUNC_TYPE") != null) {
       if (values.get("FUNC_TYPE").indexOf("科") > -1 || values.get("FUNC_TYPE").indexOf("學") > -1) {
-        result.setFuncType(codeTableService.getCodeByDesc("FUNC_TYPE", values.get("FUNC_TYPE")));
+        result.setFuncType(cts.getCodeByDesc("FUNC_TYPE", values.get("FUNC_TYPE")));
       } else {
         result.setFuncType(values.get("FUNC_TYPE"));
       }
@@ -7007,7 +6994,7 @@ public class NHIWidgetXMLService {
 
   private void findDiffOpd(List<FILE_DIFF> diffList, MR mr, OP_D opd) {
     if (diffList == null) {
-      CODE_TABLE ct = codeTableService.getCodeTable("INFECTIOUS", opd.getIcdCm1());
+      CODE_TABLE ct = cts.getCodeTable("INFECTIOUS", opd.getIcdCm1());
       mr.setInfectious((ct == null) ? 0 : 1);
       mr.setIcdcm1(opd.getIcdCm1());
       MRDetail.updateIcdcmOtherOP(mr, opd);
@@ -7046,6 +7033,47 @@ public class NHIWidgetXMLService {
 
     mr.setdId(opd.getId());
     mrDao.updateDid(opd.getId(), mr.getId());
+  }
+  
+  private void findDiffIpd(List<FILE_DIFF> diffList, MR mr, IP_D ipd) {
+    if (diffList == null) {
+      CODE_TABLE ct = cts.getCodeTable("INFECTIOUS", ipd.getIcdCm1());
+      mr.setInfectious((ct == null) ? 0 : 1);
+      mr.setIcdcm1(ipd.getIcdCm1());
+      MRDetail.updateIcdcmOtherIP(mr, ipd);
+      MRDetail.updateIcdpcsIP(mr, ipd);
+      MRDetail.updateIcdAllByAlphabet(mr);
+      mr = mrDao.save(mr);
+      ipd.setMrId(mr.getId());
+      if (ipd.getOwnExpense() == null) {
+        ipd.setOwnExpense(0);
+      }
+      ipd = ipdDao.save(ipd);
+    } else {
+      if (!mr.getIcdcm1().equals(ipd.getIcdCm1())) {
+        FILE_DIFF fileDiff = new FILE_DIFF(mr.getId(), "icdCM", ipd.getIcdCm1());
+        fileDiff.setArrayIndex(0);
+        diffList.add(fileDiff);
+        mr.setChangeICD(1);
+      }
+
+      String oldIcdcmOthers = mr.getIcdcmOthers();
+      MRDetail.updateIcdcmOtherIP(mr, ipd);
+      if (compareDotStrings(mr.getId(), oldIcdcmOthers, mr.getIcdcmOthers(), "icdCM", diffList,
+          0)) {
+        mr.setChangeICD(1);
+        mr.setIcdcmOthers(oldIcdcmOthers);
+      }
+
+      String oldIcdpcs = mr.getIcdpcs();
+      MRDetail.updateIcdpcsIP(mr, ipd);
+      if (compareDotStrings(mr.getId(), oldIcdpcs, mr.getIcdpcs(), "icdOP", diffList, -1)) {
+        mr.setChangeOther(1);
+        mr.setIcdpcs(oldIcdpcs);
+      }
+    }
+    mr.setdId(ipd.getId());
+    mrDao.updateDid(ipd.getId(), mr.getId());
   }
 
   private void saveDiffList(List<FILE_DIFF> diffList, MR mr) {
@@ -7195,7 +7223,7 @@ public class NHIWidgetXMLService {
     List<OP_P> oppBatch = new ArrayList<OP_P>();
 
     HashMap<String, String> payCodeType = getPayCodeType();
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
     for (String inhNo : opps.keySet()) {
       List<OP_P> oppList = opps.get(inhNo);
       int index = -1;
@@ -7292,7 +7320,7 @@ public class NHIWidgetXMLService {
  // 避免重複insert
     List<IP_D> ipdList = ipdDao.findByIDFromMR(orderDateMore[0], orderDateMore[1]);
     System.out.println("db mr count=" + mrList.size() + ",ip_D count=" + ipdList.size());
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
     for (int i = 1; i < sheet.getPhysicalNumberOfRows(); i++) {
       HSSFRow row = sheet.getRow(i);
       if (row == null) {
@@ -7322,7 +7350,7 @@ public class NHIWidgetXMLService {
         if (ipdDB != null) {
           ipd.setId(ipdDB.getId());
         }
-        mr.updateMR(ipd, diffList, codeTableService);
+        mr.updateMR(ipd, diffList, cts);
         if (diffList != null && diffList.size() > 0) {
           mr.setChangeOther(1);
         }
@@ -7335,7 +7363,7 @@ public class NHIWidgetXMLService {
         MRDetail.updateIcdcmOtherIP(mr, ipd);
         MRDetail.updateIcdpcsIP(mr, ipd);
         MRDetail.updateIcdAllByAlphabet(mr);
-        CODE_TABLE ct = codeTableService.getCodeTable("INFECTIOUS", ipd.getIcdCm1());
+        CODE_TABLE ct = cts.getCodeTable("INFECTIOUS", ipd.getIcdCm1());
         mr.setInfectious((ct == null) ? 0 : 1);
         mr = mrDao.save(mr);
         ipd.setMrId(mr.getId());
@@ -7400,7 +7428,7 @@ public class NHIWidgetXMLService {
 
     HashMap<String, String> payCodeType = getPayCodeType();
     CompareWarning cw =
-        new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+        new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
     
     for (String key : ippMap.keySet()) {
       List<IP_P> newIppList = ippMap.get(key);
@@ -7543,44 +7571,58 @@ public class NHIWidgetXMLService {
     }
   }
   
-  public void checkDiffOpd(List<FILE_DIFF> list, OP_D newOpd) {
+  /**
+   * 檢查特定治療項目是否有異動
+   * @param list
+   * @param newOpd
+   */
+  public void checkDiffOpdCureItem(List<FILE_DIFF> list, OP_D newOpd) {
     Optional<OP_D> optional = opdDao.findById(newOpd.getId());
     if (!optional.isPresent()) {
       return;
     }
     OP_D old = optional.get();
-    if (old.getCureItemNo1() == null && newOpd.getCureItemNo1() == null) {
+    checkDiffItem(old.getPayType(), newOpd.getPayType(), list, newOpd.getMrId(), "payType", 0);
+    checkDiffItem(old.getPartNo(), newOpd.getPartNo(), list, newOpd.getMrId(), "partNo", 0);
+    if (checkDiffItem(
+        old.getCureItemNo1(), newOpd.getCureItemNo1(), list, newOpd.getMrId(), "cureItems", 0)) {
       return;
-    } else if (old.getCureItemNo1() == null && newOpd.getCureItemNo1() != null) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 0, newOpd.getCureItemNo1()));
-    } else if (old.getCureItemNo1() != null && !old.getCureItemNo1().equals(newOpd.getCureItemNo1())) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 0, newOpd.getCureItemNo1()));
     }
-    
-    if (old.getCureItemNo2() == null && newOpd.getCureItemNo2() == null) {
+    if (checkDiffItem(
+        old.getCureItemNo2(), newOpd.getCureItemNo2(), list, newOpd.getMrId(), "cureItems", 1)) {
       return;
-    } else if (old.getCureItemNo2() == null && newOpd.getCureItemNo2() != null) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 1, newOpd.getCureItemNo2()));
-    } else if (old.getCureItemNo2() != null && !old.getCureItemNo2().equals(newOpd.getCureItemNo2())) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 1, newOpd.getCureItemNo2()));
     }
-    
-    if (old.getCureItemNo3() == null && newOpd.getCureItemNo3() == null) {
+    if (checkDiffItem(
+        old.getCureItemNo3(), newOpd.getCureItemNo3(), list, newOpd.getMrId(), "cureItems", 2)) {
       return;
-    } else if (old.getCureItemNo3() == null && newOpd.getCureItemNo3() != null) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 2, newOpd.getCureItemNo3()));
-    } else if (old.getCureItemNo3() != null && !old.getCureItemNo3().equals(newOpd.getCureItemNo3())) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 2, newOpd.getCureItemNo3()));
     }
-    
-    if (old.getCureItemNo4() == null && newOpd.getCureItemNo4() == null) {
+    if (checkDiffItem(
+        old.getCureItemNo4(), newOpd.getCureItemNo4(), list, newOpd.getMrId(), "cureItems", 3)) {
       return;
-    } else if (old.getCureItemNo4() == null && newOpd.getCureItemNo4() != null) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 3, newOpd.getCureItemNo4()));
-    } else if (old.getCureItemNo4() != null && !old.getCureItemNo4().equals(newOpd.getCureItemNo4())) {
-      list.add(new FILE_DIFF(newOpd.getMrId(), "cureItems", 3, newOpd.getCureItemNo4()));
     }
-    
+  }
+  
+  /**
+   * 比對新舊申報檔的欄位是否有異
+   * @param oldItem
+   * @param newItem
+   * @param list
+   * @param mrId
+   * @param diffFieldName
+   * @param index
+   * @return true:該欄位有資料，false:該欄位無資料
+   */
+  private boolean checkDiffItem(String oldItem, String newItem, List<FILE_DIFF> list,
+     Long mrId, String diffFieldName, int index) {
+    if (oldItem == null && newItem == null) {
+      return true;
+    }
+    if (oldItem == null && newItem != null) {
+      list.add(new FILE_DIFF(mrId, diffFieldName, index, newItem));
+    } else if (oldItem != null && !oldItem.equals(newItem)) {
+      list.add(new FILE_DIFF(mrId, diffFieldName, index, newItem));
+    }
+    return false;
   }
   
   private void changeEmptyToNull(DEDUCTED_NOTE note) {
@@ -7753,7 +7795,7 @@ public class NHIWidgetXMLService {
     //System.out.println("mrList:" + mrList.size() + "," +  orderDate[0] + " , " +  orderDate[1]);
     List<OP_D> opdList = opdDao.findByIDFromMR(orderDate[0], orderDate[1]);
     //System.out.println("opdList:" + opdList.size());
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
     
     for (int i = titleRowIndex + 1; i < sheet.getPhysicalNumberOfRows(); i++) {
       XSSFRow row = sheet.getRow(i);
@@ -7797,9 +7839,9 @@ public class NHIWidgetXMLService {
             && shouldCompareWarning(mr, cw, opd.getFuncType())) {
           diffList = new ArrayList<FILE_DIFF>();
           clearFileDiff(mr.getId());
-          checkDiffOpd(diffList, opd);
+          checkDiffOpdCureItem(diffList, opd);
         }
-        mr.updateMR(opd, diffList, codeTableService);
+        mr.updateMR(opd, diffList, cts);
         if (diffList != null && diffList.size() > 0) {
           mr.setChangeOther(1);
         }
@@ -7846,7 +7888,7 @@ public class NHIWidgetXMLService {
     // 要存到 DB 的 batch
     List<OP_P> oppBatch = new ArrayList<OP_P>();
     CompareWarning cw =
-        new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+        new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
     HashMap<String, String> values = null;
     
     for (int i = titleRowIndex + 1; i < sheet.getPhysicalNumberOfRows(); i++) {
@@ -7881,9 +7923,9 @@ public class NHIWidgetXMLService {
         mrList.add(mr);
         Integer rocIdDateCountValue = rocIdDateCount.get(values.get("ROC_ID") + opd.getFuncEndDate());
         if (rocIdDateCountValue == null) {
-          rocIdDateCount.put(values.get("ROC_ID") + opd.getFuncEndDate(), new Integer(1));
+          rocIdDateCount.put(values.get("ROC_ID") + opd.getFuncEndDate(), Integer.valueOf(1));
         } else {
-          rocIdDateCount.put(values.get("ROC_ID") + opd.getFuncEndDate(), new Integer(rocIdDateCountValue.intValue() + 1));
+          rocIdDateCount.put(values.get("ROC_ID") + opd.getFuncEndDate(), Integer.valueOf(rocIdDateCountValue.intValue() + 1));
         }
         //System.out.println("new opd=" + opd.getId() + " opd.MrId=" + opd.getMrId() + ",mr=" + mr.getId() + " did=" + mr.getdId());
       } else {
@@ -8639,7 +8681,7 @@ public class NHIWidgetXMLService {
     List<MR> mrList = mrDao.findByMrEndDateAndDataFormatOrderById(XMLConstant.DATA_FORMAT_IP, orderDateMore[0], orderDateMore[1]);
     
     List<IP_D> ipdList = ipdDao.findByIDFromMR(orderDateMore[0], orderDateMore[1]);
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
     
     //System.out.println("readTheseIPD select from " + orderDateMore[0] + " to " + orderDateMore[1]+", ipdList=" + ipdList.size() + ", mrList=" + mrList.size());
     for (int i = titleRowIndex + 1; i < sheet.getPhysicalNumberOfRows(); i++) {
@@ -8670,7 +8712,7 @@ public class NHIWidgetXMLService {
           diffList = new ArrayList<FILE_DIFF>();
           clearFileDiff(mr.getId());
         }
-        mr.updateMR(ipd, diffList, codeTableService);
+        mr.updateMR(ipd, diffList, cts);
         if (diffList != null && diffList.size() > 0) {
           mr.setChangeOther(1);
         }
@@ -8687,7 +8729,7 @@ public class NHIWidgetXMLService {
         MRDetail.updateIcdpcsIP(mr, ipd);
         //System.out.println(ipd.getRocId() + " icdcm1=" + ipd.getIcdCm1() + "," + mr.getIcdcmOthers() + "," + mr.getIcdpcs());
         MRDetail.updateIcdAllByAlphabet(mr);
-        CODE_TABLE ct = codeTableService.getCodeTable("INFECTIOUS", ipd.getIcdCm1());
+        CODE_TABLE ct = cts.getCodeTable("INFECTIOUS", ipd.getIcdCm1());
         mr.setInfectious((ct == null) ? 0 : 1);
         mr = mrDao.save(mr);
         ipd.setMrId(mr.getId());
@@ -8776,7 +8818,7 @@ public class NHIWidgetXMLService {
     // 要存到 DB 的 batch
     List<IP_P> ippBatch = new ArrayList<IP_P>();
     
-    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), codeTableService);
+    CompareWarning cw = new CompareWarning(parameters.getByCat("COMPARE_WARNING"), cts);
    
     // System.out.println("select from " + orderDateMore[0] + " to " + orderDateMore[1]+", ipdList=" + ipdList.size() + ", mrList=" + mrList.size());
     for (String key : ippMap.keySet()) {
@@ -9310,9 +9352,9 @@ public class NHIWidgetXMLService {
     for (OP_D op_D : opdList) {
       Integer count = result.get(op_D.getRocId() + op_D.getFuncEndDate());
       if (count == null) {
-        result.put(op_D.getRocId() + op_D.getFuncEndDate(), new Integer(1));
+        result.put(op_D.getRocId() + op_D.getFuncEndDate(), Integer.valueOf(1));
       } else {
-        result.put(op_D.getRocId() + op_D.getFuncEndDate(), new Integer(count.intValue() + 1));
+        result.put(op_D.getRocId() + op_D.getFuncEndDate(), Integer.valueOf(count.intValue() + 1));
       }
     }
     
